# LibreMac

./: .editorconfig  .gitignore  .swift-format  CMakeLists.txt  README.md  project.yml
BridgeNative/: CMakeLists.txt
BridgeNative/include/: bridge.h
BridgeNative/src/: bridge_registry.cpp  bridge_session.cpp  bridge_types.cpp  registry_handle.h
LibreMac/: Info.plist
LibreMac/App/: LibreMacApp.swift
LibreMac/Bridge/: BridgeRAII.swift  CppBridge.h  CppBridge.mm  module.modulemap
LibreMac/Resources/: Localizable.xcstrings  PrivacyInfo.xcprivacy
LibreMac/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
LibreMac/Services/: ReaderMonitor.swift
LibreMac/ViewModels/: CardMonitor.swift  SigningCoordinator.swift
LibreMac/Views/: CardStatusView.swift  PinEntryView.swift  PreferencesView.swift  SignDemoView.swift
LibreMacShared/: Package.swift
LibreMacShared/Sources/LibreMacShared/: AppGroupConstants.swift  LibreMacError.swift  LocalizedText.swift  Logger+Categories.swift  SecureString.swift
LibreMacShared/Tests/LibreMacSharedTests/: LibreMacErrorTests.swift  LocalizedTextTests.swift  SecureStringTests.swift
LibreMacTests/: BridgeRAIITests.swift  SigningCoordinatorTests.swift
Scripts/: adhoc-sign.sh  build-cmake-side.sh  generate-project.sh
Tools/ts2xcstrings/: Package.swift
Tools/ts2xcstrings/Sources/ts2xcstrings/: Ts2Xcstrings.swift  main.swift
Tools/ts2xcstrings/Tests/ts2xcstringsTests/: Ts2XcstringsTests.swift
cmake/: FetchLibreMiddleware.cmake  LibreMacOptions.cmake
docs/: P3-PROGRESS.md
(+2 files in other folders)
